# VehicleLab2-master

./: CMakeLists.txt
console_app/: console_app.cc
include/functions/: vehicle.h
src/: vehicle.cc
tests/: vehicle_tests.cc
